--- a/packages/frontend/src/style/input.css
+++ b/packages/frontend/src/style/input.css
@@ -1,8 +1,3 @@
-/* EMAIL INPUT */
-input[type="email"] {
-  min-width: 17em;
-}
-
 /* RADIO BUTTONS */
 input[type="radio"] {
   display: none;
